--- a/style.css
+++ b/style.css
@@ -1,20 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Hammersmith+One&family=Open+Sans:wght@300&display=swap');
 
 body {
-    background-color: #c1fdf4;
+  background-color: #d7f9f4;
+  font-family: open sans;
+  letter-spacing: .7px;
+}
+.page {
+  margin: 3em;
+}
+h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 60px;
+}
+.blurb {
+  border: 7.5px solid salmon;
+  margin: 30px;
+  padding: 20px;
+  border-radius: 15px;
 }
 
-.nav {
+
+form {
+  font-size: 25px;
+  line-height: 50px;
+}
+.name-input {
+  background-color: #d7f9f4;
+  outline: #d7f9f4;
+  font-size: 25px;
+  border: none;
+  border-bottom: 2px solid rgba(13, 156, 144, 1);
+  color: black;
+  width: 250px;
+  padding: 2px 4px;
+}
+.btn {
+  background-color: rgba(13, 156, 144, 1);
+  padding: 20px 20px;
+  font-size: 20px;
+  color: white;
+  margin: 6px 4px;
+  border-radius: 20px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+  border: none;
+}
+.btn:hover {
+  opacity: 0.6;
+}
+
+
+nav {
     background-color: rgba(13, 156, 144, 1);
     overflow: hidden;
     font-family: open sans;
-    list-style: none;
+    margin: -10px;
 }
-.nav a {
-    display: block;
-    text-align: center;
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-  }
+nav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+nav a:hover {
+  color: black;
+}
+nav a.active {
+  color: black;
+}
+
